Fixing tags with extra spaces

--- a/public/style/source/transactions.less
+++ b/public/style/source/transactions.less
@@ -5,12 +5,14 @@ div.transaction{
     overflow:hidden;
     zoom:1;
 }
+
 div.transaction:hover{
     background-color:#EEEEEE;
 }
 
 div.tags{
     float:right;
+    margin-right:.25em;
 }
 
 div.tag{
@@ -19,9 +21,9 @@ div.tag{
     padding:3px;
     border:1px solid black;
     border-radius:5px;
-    box-shadow: 1px 1px 1px #888888; 
-
+    box-shadow: 1px 1px 1px #888888;
 }
+
 div.tag:hover{
     cursor:pointer;
     background-color:#FFFFD5;
